<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/colorDarkBlue">

   <RelativeLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:padding="@dimen/padding20">

       <ImageView
           android:id="@+id/profile_photo"
           android:layout_width="match_parent"
           android:layout_height="@dimen/imgHeight520dp"
           android:background="@drawable/profile_photo"
           android:contentDescription="@string/profile_photo" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop20"
            android:fontFamily="@font/ralewaybold"
            android:text="@string/testFirstname"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size25sp"
            android:layout_below="@+id/profile_photo" />

       <TextView
           android:id="@+id/tvAge"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/marginTop10"
           android:fontFamily="@font/ralewayregular"
           android:lineHeight="@dimen/size26sp"
           android:text="@string/testAge"
           android:textColor="@color/colorLightGrey"
           android:textSize="@dimen/size18sp"
           android:layout_below="@+id/tvName" />

       <TextView
           android:id="@+id/tvOccupation"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/marginTop10"
           android:fontFamily="@font/ralewayregular"
           android:lineHeight="@dimen/size26sp"
           android:text="@string/testOccupation"
           android:textColor="@color/colorWhite"
           android:textSize="@dimen/size18sp"
           android:layout_below="@+id/tvAge" />

       <TextView
           android:id="@+id/tvDescription"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/marginTop10"
           android:fontFamily="@font/ralewayregular"
           android:lineHeight="@dimen/size26sp"
           android:text="@string/testDescription"
           android:textColor="@color/colorWhite"
           android:textSize="@dimen/size18sp"
           android:layout_below="@+id/tvOccupation" />

        <Button
            android:id="@+id/signout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop20"
            android:background="@drawable/button_radius"
            android:padding="@dimen/padding_all_10"
            android:text="@string/sign_out_btn"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size18sp"
            android:layout_below="@+id/tvDescription"
            android:onClick="goToMainActivity"/>

   </RelativeLayout>

</ScrollView>

