...
    <string name="ERROR_MSG_LASTNAME">Please enter your last name</string>
    <string name="ERROR_MSG_EMAIL">Enter valid email address</string>
    <string name="ERROR_MSG_DOB">You are too young, must be at 18 to register</string>
    <string name="ERROR_MSG_OCCUPATION">Please enter your occupation</string>
    <string name="ERROR_MSG_DESCRIPTION">Please enter your description</string>
    <string name="EMPTY_MSG"></string>
    <string name="matches">MATCHES</string>
    <string name="settings">SETTINGS</string>
    <string name="toolbarTitle">Toolbar</string>

    <!-- FRAGMENTS -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragTitlePROFILE">PROFILE</string>
...
